# alpacc

./: .gitignore  CHANGELOG.md  DERIVATION_OPTIMIZATION.md  IMPLEMENTATION_NOTES.md  LICENSE  README.md  alpacc.cabal  alternative_math_grammar.fut  bench.sh  book_grammar.fut  futhark-test.sh  futhark-tests.sh  math_grammar.fut  paper_grammar.fut  parallel-parser.cabal  shell.nix
.github/workflows/: main.yml
app/: CFG.hs  Main.hs
benchmarks/lexer/json/: .gitignore  Cargo.toml  Makefile  README.md  futhark.pkg  json.alp  lexer.cu  lexer.rs
benchmarks/lexer/lisp/: .gitignore  Cargo.toml  Makefile  README.md  lexer.c  lexer.cu  lexer.rs  main.rs  tokens.c
cuda/: common.cu  lexer.cu  parser.cu
debug/: Main.hs
fut/: futhark.pkg  parser.fut
futhark/: futhark.pkg  lexer.fut  parser.fut  test.fut
futhark-parser-tests/: Dockerfile  __main__.py  parser.fut
futhark-tests/: .gitignore  .lex.py.~undo-tree~  README.md  __main__.py  _parser_0.c  futhark.pkg  lex.py  lexer.py  parse.py  parser.py  parser_0.c  parser_0.fut  parser_0.h  parser_0.json  requirements.txt  util.py
futhark-tests/lexer-tests/: overlap.json  overlap0.json  overlap1.json  overlap2.json  sexp.json
grammars/: alternative_math_grammar.alp  alternative_math_grammar.cg  arithmetic.alp  big_grammar.cg  book_grammar.cg  brackets.alp  grammar.cg  json.alp  json.cg  lexer.alp  list.alp  list.cg  llp01.alp  lookback2_grammar.cg  math_grammar.alp  math_grammar.cg  non_llp.alp  non_llp_grammar.cg  paper_grammar.alp  paper_grammar.cg  sexp.alp  sexp.cg  simple.alp  small_grammar.cg  test.alp  test.cg
haskell-tests/: CFG.hs  LL.hs  LLP.hs  Main.hs  RegularExpression.hs
parallel-parser/: README.md  big_grammar.in  book_grammar.in  extended_grammar.in  grammar.in  lookback2_grammar.cfg  non_llp_grammar.in  paper_grammar.cfg  paper_grammar.fut  paper_grammar.in  parallel-parser.cabal  parser.fut  small_grammar.cfg  small_grammar.in
parallel-parser/app/: Main.hs
parallel-parser/src/: MyLib.hs
parallel-parser/src/ParallelParser/: Generator.hs  Grammar.hs  LL.hs  LLP.hs  Parser.hs
parallel-parser/src/Parser/: Grammar.hs  Parsing.hs  ParsingOneSymbol.hs
parallel-parser/test/: LL.hs  LLP.hs
parser-tests/: main.py
sequential-parser/: CHANGELOG.md  README.md  big_grammar.json  grammar.json  sequential-parser.cabal
sequential-parser/src/: Main.hs
small-test/: parser_llp22_0  parser_llp22_0.c  parser_llp22_0.fut
src/Alpacc/: CFG.hs  Debug.hs  Encode.hs  Generator.hs  Grammar.hs  HashTable.hs  LL.hs  LLP.hs  Lexer.hs  Random.hs  RegularExpression.hs  Test.hs  Types.hs  Util.hs
src/Alpacc/Generator/: Analyzer.hs  Generator.hs  Util.hs
src/Alpacc/Generator/Cuda/: Cudafy.hs  Generator.hs  Lexer.hs  Parser.hs
src/Alpacc/Generator/Futhark/: FutPrinter.hs  Futharkify.hs  Generator.hs  Lexer.hs  Parser.hs  Util.hs
src/Alpacc/Lexer/: DFA.hs  DFAParallelLexer.hs  Encode.hs  FSA.hs  NFA.hs  ParallelLexing.hs  RegularExpression.hs  SimulateDFA.hs
src/Alpacc/Test/: Lexer.hs  LexerParser.hs  Parser.hs  Test.hs
src/ParallelParser/: CFG.hs  Generator.hs  Grammar.hs  LL.hs  LLP.hs  Lexer.hs
test/: LL.hs  LLP.hs  Main.hs
tests/: testfuthark.sh  testjson.sh
