cabal-version:      2.4
name:               parallel-parser
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:
author:             William Due
maintainer:         williamhenrichdue@gmail.com

-- A copyright notice.
-- copyright:
category:           Language
extra-source-files: CHANGELOG.md

common common
  default-language: Haskell2010
  default-extensions:
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    OverloadedStrings
    TupleSections
    QuasiQuotes
    DeriveFunctor
    ExtendedDefaultRules
  
  build-depends:
    , base
    , composition
    , containers
    , split
    , text
    , interpolate
    , extra
    , parallel
    , filepath

library
  import: common
  exposed-modules:
    ParallelParser.Grammar
    ParallelParser.LL
    ParallelParser.LLP
    ParallelParser.Generator

  hs-source-dirs:     src

executable parallel-parser
  import:             common 
  main-is:            Main.hs

  build-depends:
    optparse-applicative
    , parallel-parser
    , filepath

  hs-source-dirs:     app

executable debug
  import:             common
  main-is:            Main.hs

  build-depends:
    optparse-applicative
    , parallel-parser
    , filepath

  hs-source-dirs:     debug

test-suite test-parallel-parser
  import:           common
  other-modules:
    LL
    LLP

  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  build-depends:
    , HUnit
    , parallel-parser
