cabal-version:      2.4
name:               parallel-parser
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             William Due
maintainer:         williamhenrichdue@gmail.com

-- A copyright notice.
-- copyright:
category:           Language
extra-source-files: CHANGELOG.md

library
  default-language:   Haskell2010
  default-extensions:
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    OverloadedStrings
    TupleSections
    QuasiQuotes
    DeriveFunctor
    ExtendedDefaultRules
    DeriveGeneric
  
  build-depends:
    , base
    , composition
    , containers
    , split
    , text
    , interpolate
    , extra
    , parallel
    , filepath
    , mtl
    , deepseq-generics
    , deepseq
    , Control-Engine
  
  exposed-modules:
    ParallelParser.Grammar
    ParallelParser.LL
    ParallelParser.LLP
    ParallelParser.Generator

  hs-source-dirs:     src

executable parallel-parser
  default-language:   Haskell2010
  ghc-options:        -threaded -rtsopts
  main-is:            Main.hs

  default-extensions:
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    OverloadedStrings
    TupleSections
    QuasiQuotes
    DeriveFunctor
    ExtendedDefaultRules
    DeriveGeneric

  build-depends:
    optparse-applicative
    , parallel-parser
    , filepath
    , deepseq-generics
    , deepseq
    , Control-Engine
    , interpolate
    , containers
    , parallel
    , resource-pool
    , stm
    , base

  hs-source-dirs:     app

test-suite test-parallel-parser
  default-language:   Haskell2010
  ghc-options:        -threaded -rtsopts
  other-modules:
    LL
    LLP

  default-extensions:
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    OverloadedStrings
    TupleSections
    QuasiQuotes
    DeriveFunctor
    ExtendedDefaultRules
    DeriveGeneric

  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  build-depends:
    , HUnit
    , parallel-parser
    , interpolate
    , containers
    , base
