cabal-version:      2.4
name:               parallel-parser
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             William Due
maintainer:         williamhenrichdue@gmail.com

-- A copyright notice.
-- copyright:
category:           Language
extra-source-files: CHANGELOG.md

library
    exposed-modules:
        Parser.Grammar,
        Parser.Parsing
    default-extensions:
        FlexibleContexts, 
        FlexibleInstances,
        OverloadedStrings,
        DeriveGeneric,
        TupleSections

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0, containers, split, aeson, text, bytestring, composition, split
    hs-source-dirs:   src
    default-language: Haskell2010

executable parallel-parser
    main-is:                Main.hs
    default-extensions:       
        FlexibleContexts, 
        FlexibleInstances,
        OverloadedStrings,
        DeriveGeneric,
        TupleSections

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        parallel-parser,
        base ^>=4.16.4.0,
        bytestring,
        composition,
        containers

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite parallel-parser-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    build-depends:    base ^>=4.16.4.0,
