cabal-version:      2.4
name:               parallel-parser
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:
author:             William Due
maintainer:         williamhenrichdue@gmail.com

-- A copyright notice.
-- copyright:
category:           Language
extra-source-files: CHANGELOG.md

library
  exposed-modules:
    ParallelParser.Grammar
    ParallelParser.Parser

  default-extensions:
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    OverloadedStrings
    TupleSections
    QuasiQuotes

  build-depends:
    , base
    , composition
    , containers
    , split
    , text
    , raw-strings-qq

  hs-source-dirs:     src
  default-language:   Haskell2010

executable parallel-parser
  main-is:            Main.hs
  default-extensions:
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    OverloadedStrings
    TupleSections
    QuasiQuotes

  build-depends:
    , base
    , composition
    , containers
    , parallel-parser
    , raw-strings-qq

  hs-source-dirs:     app
  default-language:   Haskell2010

test-suite test-parallel-parser
  other-modules:
    LL
    LLP

  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  build-depends:
    , base
    , composition
    , containers
    , HUnit
    , parallel-parser
