cabal-version:      2.4
name:               sequential-parser
version:            0.1.0.0
synopsis:           A Table Driven LL(1) Parser.

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             William Due
maintainer:         williamhenrichdue@gmail.com

-- A copyright notice.
-- copyright:
category:           Language
extra-source-files: CHANGELOG.md

executable sequential-parser
    main-is:          Main.hs
    extensions:       FlexibleContexts, FlexibleInstances, OverloadedStrings, DeriveGeneric, TupleSections

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.3.0, Stack, containers, split, aeson, text, bytestring
    hs-source-dirs:   src
    default-language: Haskell2010
